--- a/sass/sections/_image-text.scss
+++ b/sass/sections/_image-text.scss
@@ -7,8 +7,12 @@
     display: flex;
     gap: 6%;
     flex-direction: column-reverse;
+    padding-top: 80px;
+    padding-bottom: 80px;
 
     @media (min-width: $tablet-md) {
+      padding-top: auto;
+      padding-bottom: auto;
       flex-direction: row;
 
       &.right {
